Fix grid__item overlapping footer issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
 	font-size: 1.6rem;
 	margin: 0;
 	min-height: 100%;
+	padding-bottom: 82px;
 	position: relative;
 }
 
